<resources>
    <string name="app_name">Android Master</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="web_development">Web Development</string>
    <string name="menu_slideshow">Microsoft Tech</string>
    <string name="menu_tools">Extra Knowledge</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="android_tutorial">Android Tutorial</string>
    <string name="cardChoose">Choose a Card</string>
</resources>
