<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidmaster.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_android_Tutorial"
            app:destination="@id/android_Tutorial" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.androidmaster.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.androidmaster.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.androidmaster.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.androidmaster.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.androidmaster.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/android_Tutorial"
        android:name="com.example.androidmaster.Android_Tutorial"
        android:label="@string/android_tutorial"
        tools:layout="@layout/fragment_android__tutorial" >
        <action
            android:id="@+id/action_android_Tutorial_to_memorizeRecV"
            app:destination="@id/memorizeRecV" />
    </fragment>
    <fragment
        android:id="@+id/memorizeRecV"
        android:name="com.example.androidmaster.memorise.MemorizeRecV"
        android:label="@string/cardChoose"
        tools:layout="@layout/fragment_memorize_rec_v" />
</navigation>